--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
-# rename
-set-window-option -g automatic-rename off
-set-option -g allow-rename off
+# remap prefix from 'C-b' to 'C-s'
+unbind C-b
+set-option -g prefix C-s
+bind-key C-s send-prefix
